kommentar zu summen von normverteilungen hinzugefügt

--- a/kap4.tex
+++ b/kap4.tex
@@ -61,7 +61,9 @@ Normalverteilung oder \textit{Gauss-Verteilung} nimmt zwei Parameter $\mu \in \R
 \begin{center}
 \includegraphics[scale=0.3]{normalverteilung.png}
 \end{center}
-Mit einer Normalverteilung können z.b: die Streuung von Messwerten um ihren Mittelwert, Gewichte bzw. Grössen in Bevölkerungen, Leistungen in IQ-Tests und viele mehr modelliert werden. Der Grund für die Wichtigkeit der Normalverteilung liegt im \textit{Zentralen Grenzwertsatz}, der in Kapitel 5 besprochen wird.
+Mit einer Normalverteilung können z.b: die Streuung von Messwerten um ihren Mittelwert, Gewichte bzw. Grössen in Bevölkerungen, Leistungen in IQ-Tests und viele mehr modelliert werden. Der Grund für die Wichtigkeit der Normalverteilung liegt im \textit{Zentralen Grenzwertsatz}, der in Kapitel 5 besprochen wird. \\
+
+\underline{Bemerkung:} Für unabhängige $X_i \sim \mathcal{N}(\mu_i, \sigma_i)$ ist $X := \sum_i X_i$ auch Normal-verteilt mit $X \sim \mathcal{N}(\sum_i \mu_i, \sqrt{\sum_j \sigma_j})$
 
 \subsubsection{Standard-Normalverteilung}
 Die \textit{Standard-Normalverteilung} gibt die beiden Parameter vor: $\mu = 0$ und $\sigma^2 = 1$.
